2004-12-12  Richard Henderson  <rth@redhat.com>

        PR target/18932
        * config/i386/i386.md (all splits and peepholes): Use flags_reg_operand
        and compare_operator to propagate the input CC mode to the output.
        * config/i386/i386.c (flags_reg_operand, compare_operator): New.
        * config/i386/i386.h (PREDICATE_CODES): Add them.
        * config/i386/i386-protos.h: Update.

2004-12-10  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>

	PR rtl-optimization/16536
	Backport from mainline:
	2004-06-25  Mark Mitchell  <mark@codesourcery.com>
	* alias.c (get_alias_set): Adjust setting of
	DECL_POINTER_ALIAS_SET for pointers to aggregates.

2004-12-09  Richard Henderson  <rth@redhat.com>

	PR target/17025
	* config/i386/i386.md (testqi_1_maybe_si, andqi_2_maybe_si): New.
	(test_qi_1, andqi_2): Do not promote to simode.

2004-12-07  David Mosberger  <davidm@hpl.hp.com>

	PR target/18443
	* config/ia64/ia64.c (ia64_assemble_integer): Add support for
	emitting unaligned pointer-sized integers.

2004-12-05  Richard Henderson  <rth@redhat.com>

	PR target/18841
	* config/alpha/alpha.md (UNSPECV_SETJMPR_ER): New.
	(builtin_setjmp_receiver_er_sl_1): Use it.
	(builtin_setjmp_receiver_er_1): Likewise.
	(builtin_setjmp_receiver_er, exception_receiver_er): Remove.
	(builtin_setjmp_receiver): Don't split for explicit relocs until
	after reload.
	(exception_receiver): Likewise.

2004-12-03  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	2003-10-31  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>
	Backport from mainline
	* aclocal.m4 (gcc_AC_FUNC_MMAP_BLACKLIST): Blacklist ultrix*.
	* configure: Rebuilt.

2004-12-03  Richard Henderson  <rth@redhat.com>

	2004-09-24  Richard Henderson  <rth@redhat.com>
	PR rtl-opt/17503
	* regclass.c (subregs_of_mode): Turn into an htab.  Make static.
	(som_hash, som_eq): New.
	(init_subregs_of_mode, record_subregs_of_mode): New.
	(cannot_change_mode_set_regs): Rewrite for htab implementation.