@@ -2888,9 +2888,23 @@ get_last_insn_anywhere ()
 rtx
 get_first_nonnote_insn ()
 {
-  rtx insn;
+  rtx insn = first_insn;
 
-  for (insn = first_insn; insn && NOTE_P (insn); insn = next_insn (insn));
+  if (insn)
+    {
+      if (NOTE_P (insn))
+	for (insn = next_insn (insn);
+	     insn && NOTE_P (insn);
+	     insn = next_insn (insn))
+	  continue;
+      else
+	{
+	  if (GET_CODE (insn) == INSN
+	      && GET_CODE (PATTERN (insn)) == SEQUENCE)
+	    insn = XVECEXP (PATTERN (insn), 0, 0);
+	}
+    }
+
   return insn;
 }
 
@@ -2900,9 +2914,24 @@ get_first_nonnote_insn ()
 rtx
 get_last_nonnote_insn ()
 {
-  rtx insn;
+  rtx insn = last_insn;
 
-  for (insn = last_insn; insn && NOTE_P (insn); insn = previous_insn (insn));
+  if (insn)
+    {
+      if (NOTE_P (insn))
+	for (insn = previous_insn (insn);
+	     insn && NOTE_P (insn);
+	     insn = previous_insn (insn))
+	  continue;
+      else
+	{
+	  if (GET_CODE (insn) == INSN
+	      && GET_CODE (PATTERN (insn)) == SEQUENCE)
+	    insn = XVECEXP (PATTERN (insn), 0,
+			    XVECLEN (PATTERN (insn), 0) - 1);
+	}
+    }
+
   return insn;
 }
 
